# drawingBoard

./: .gitignore  CMakeLists.txt  Paras.xml  info.rc.in  main.cpp  qml.qrc
src/hal/: CMakeLists.txt
src/hal/megatron/: CMakeLists.txt  iMegatron.cpp  iMegatron.h  megatronDef.h
src/hal/megatron/printMegatron/: CMakeLists.txt  dzSTeGMCMegatron.cpp  dzSTeGMCMegatron.h
src/hal/plc/: CMakeLists.txt  modbusServer.cpp  modbusServer.h  plcSigDef.cpp  plcSigDef.h
src/hal/printDatas/: CMakeLists.txt  basicDef.h  printDatas.cpp  printDatas.h  printDatasDef.cpp  printDatasDef.h
src/hal/vm/: CMakeLists.txt  ivm.cpp  ivm.h  manuDef.cpp  manuDef.h  ncDef.cpp  ncDef.h  vm.cpp  vm.h
src/hal/vm/action/: CMakeLists.txt  iAction.cpp  iAction.h  iActionState.cpp  iActionState.h
src/hal/vm/action/manu/: CMakeLists.txt  manuAction.cpp  manuAction.h  manuState.cpp  manuState.h
src/hal/vm/action/mark/: CMakeLists.txt  markAction.cpp  markAction.h  markState.cpp  markState.h
src/hal/vm/action/spread/: CMakeLists.txt  spreadState.h  (+3 more)
src/ui/: CMakeLists.txt  mainWindow.cpp  mainWindow.h  mainWindowDef.h
src/ui/control/: CMakeLists.txt  controlDef.h  ledLab.cpp  ledLab.h
src/ui/control/btnSmart/: CMakeLists.txt  btnSmart.cpp  btnSmart.h  btnSmartState.cpp  btnSmartState.h
src/ui/imageListPanel/: CMakeLists.txt  imageItem.cpp  imageItem.h  imageListDef.h  imageListPanel.cpp  imageListPanel.h
src/ui/imageListPanel/graphicsWindow/: CMakeLists.txt  graphicsScene.cpp  graphicsScene.h  graphicsView.cpp  graphicsView.h
src/ui/manuPanel/: CMakeLists.txt  manuPanel.cpp  manuPanel.h
(+14 files in other folders)
